[package]
name = "catboost"
version = "0.1.3"
edition = "2024"
description = "Catboost inference library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wafer-inc/catboost"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
